--- a/springboot-aws-s3/pom.xml
+++ b/springboot-aws-s3/pom.xml
@@ -14,6 +14,10 @@
     <name>springboot-aws-s3</name>
     <description>Springboot AWS S3 Services</description>
 
+    <properties>
+        <starter.class>com.cubans.awss3.SpringbootAwsS3Application</starter.class>
+    </properties>
+
     <dependencies>
         <!-- aws sdk -->
         <dependency>
