--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,13 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots verify
+      - name: Build AWS-S3
+        run: |
+          cd springboot-aws-s3
+          mvn --batch-mode --update-snapshots verify
+
+      - name: Build AWS-S3QS
+        run: |
+          cd springboot-aws-sqs
+          mvn --batch-mode --update-snapshots verify
 
