--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,11 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      - name: Build Library Common
+        run: |
+          cd springboot-aws-s3
+          mvn --batch-mode --update-snapshots verify install
+
       - name: Build AWS-S3
         run: |
           cd springboot-aws-s3
