feat: redis-redisson module
Implements: new redis module to manage redisson library
update common library

--- a/springboot-aws-s3/src/main/resources/application.yml
+++ b/springboot-aws-s3/src/main/resources/application.yml
@@ -21,6 +21,6 @@ swagger:
     version: "v1"
     termsOfServiceUrl: ""
     contact:
-      name: "Alexander Perez"
+      name: "Alexander Perez/Rodolfo Echemendia"
       website: ""
-      email: "alextase89@gmail.com"
+      email: "alextase89@gmail.com;rodobarcaaa@gmail.com"
